--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <h1>Welcome to PYB Pizza.</h1>
         <div id="container"></div>
         <div id="pizza-peel"></div>
-        <div id="crust"></div>
+        <div id="crust">
+            <img src="img/crust.png">
+        </div>
         <div id="sauce"></div>
         <div id="cheese"></div>
         <div id="topping-1"></div>
