--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style = "background-image: url(img/kitchen.png); background-size: cover;">
     <head>
         <title>Pizza</title>
         <meta name = "viewport content=width-device-width, initial-scale = 1" charset="UTF-8">
         <link rel="stylesheet" href = "css/style.css">
     </head>
 
+    <marquee direction="right">|Marina Hacks 5.0 2025|</marquee>
     <body>
         <audio autoplay loop><source src="music/pizzasong.mp3"></audio>
         <h1>Welcome to PYB Pizza.</h1>
-        <div id="container"></div>
-        <div id="pizza-peel"></div>
-        <div id="crust">
-            <img src="img/crust.png">
+        <div id="container">
+            <div id="start-menu">
+                <img id = "pizza-start-menu" src="img/crust.png">
+            </div>
         </div>
-        <div id="sauce"></div>
-        <div id="cheese"></div>
-        <div id="topping-1"></div>
-        <div id="topping-2"></div>
-        <div id="topping-3"></div>
-        <div id="topping-4"></div>
-        <div id="topping-5"></div>
-        <div id="topping-6"></div>
+        
     </body>
 </html>
