--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <marquee direction="right">|Marina Hacks 5.0 2025|</marquee>
     <body>
         <audio autoplay loop><source src="music/pizzasong.mp3"></audio>
-        <h1>Welcome to PYB Pizza.</h1>
+        <div id="logo">
+            <img id="pizza-logo" src="img/pizza.gif" alt="Pizza Logo">
         <div id="container">
             <div id="start-menu">
-                <img id = "pizza-start-menu" src="img/crust.png">
-            </div>
-        </div>
-        
+                <img id = "pizza-start-menu" src="img/pizza-menu.png">
+            </div> 
     </body>
 </html>
