--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
         <link rel="stylesheet" href = "css/style.css">
     </head>
 
-    <marquee direction="right">|Marina Hacks 5.0 2025|</marquee>
+    <marquee direction="right">|Marina Hacks 5.0 2025|
+        Marina Hacks 5.0 2025|Marina Hacks 5.0 2025|Marina Hacks 5.0 2025|Marina Hacks 5.0 2025|Marina Hacks 5.0 2025|
+        Marina Hacks 5.0 2025|Marina Hacks 5.0 2025|Marina Hacks 5.0 2025|
+    </marquee>
     <body>
         <audio autoplay loop><source src="music/pizzasong.mp3"></audio>
         <div id="logo">
             <img id="pizza-logo" src="img/pizza.gif" alt="Pizza Logo">
+        </div>
         <div id="container">
             <div id="start-menu">
                 <img id = "pizza-start-menu" src="img/pizza-menu.png">
+                <div id="buttons">
+                    <button id="start-button"><img src="img/start.gif" alt="Start"></button>
             </div> 
     </body>
 </html>
