near final draft

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body style = "background-image: url(img/kitchen.png); background-size: cover; background-repeat: no-repeat; height: 100vh;">
         <audio autoplay loop><source src="music/pizzasong.mp3"></audio>
         <div id="logo">
-            <img id="pizza-logo" src="img/pizza.gif" alt="Pizza Logo">
+            <img id="pizza-logo" src="img/gif_name.gif" alt="Pizza Logo">
         </div>
         <div id="container">
             <div id="start-menu">
